--- a/assets/style.css
+++ b/assets/style.css
@@ -105,6 +105,9 @@ body {
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
+.nav-link.active-tag {
+    background-color: #BEB45A;
+}
 .nav-pills .nav-link {
 	color: #000
 }
